# DesignPatterns

./: LICENSE  README.md
LSP/: CMakeLists.txt  main.cpp
openClosedPrinciple/: CMakeLists.txt  main.cpp
singleResponsibilityPrinciple/: CMakeLists.txt  main.cpp
